# memory-augmented-retrieval-chatbot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  app.py  chainlit.md  context.md  fix_p15.py  old_chat_temp.jsx  pyproject.toml  requirements.txt  run.sh  start_server.py  startup.py  test_upload.py  test_upload_real.py
.chainlit/: config.toml
.design/: code-style.md.bak  design1.6_report.md  design2.0_report.md  design_description.txt  design_description_2.txt  design_unification.md  human-todo.txt  implementation.md  preliminary_implementation.md
.dev/: start-dev.sh  stop-dev.sh
braemon/: .doc.md  .gitignore  README.md  console-forward-plugin.mjs  index.html  package-lock.json  package.json  vite.config.js
data/: chatbot.db.old  database.sqlite3
docs/: AGENT_CONTRACTS.md  ARCHITECTURE.md  ARCHITECTURE_DECISION.md  ASSESSMENT_QA.md  CODE_GARBAGE_AUDIT.md  CURRENT_EVIDENCE_AND_LIMITATIONS.md  DATA_LIFECYCLE.md  DEMO_QA_CHEATSHEET.md  DEMO_RUNBOOK.md  DEMO_TRACE_VALIDATION.md  EVALUATION.md  EVALUATION_PLAN.md  FuturePlans.md  GIST_RAW_WINDOW_SELECTION.md  IMPLEMENTATION_DEFENSE_GUIDE.md  IMPLEMENTATION_PLAN_2W.md  KNOWN_LIMITATIONS.md  LANGGRAPH_MIGRATION_PLAN.md  LANGGRAPH_SPIKE.md  MEMORY_AGENT_BENCH.md  MEMORY_AGENT_BENCH_MISS_ANALYSIS.md  MEMORY_AGENT_BENCH_RAW_REPLAY_DIAGNOSTIC.md  MEMORY_AGENT_BENCH_REAL_SUBSET_RUN.md  MEMORY_AGENT_BENCH_TARGETED_RUN.md  PREVIOUS_CHAT_GIST_RETRIEVAL_DIAGNOSTIC.md  PROJECT_CONTEXT.md  RAW_SPAN_TRUNCATION.md  REFERENCE.md  ROUTER_QUERY_AUGMENTATION_AUDIT.md  SEMANTIC_ROUTER_V2.md  SEMANTIC_ROUTER_V2_VALIDATION.md  SYSTEM_DETAILS.md  TROUBLESHOOTING.md  TYPED_MEMORY_E2E_BENCHMARK.md  architecture_status.md  implementation_review_after_agent_wrappers.md  one-turn-sequence.mmd  rag_memory_system_evaluation_note_short.md  system-component-map.mmd
evals/: README.md  answer_heldout_analysis.py  longmemeval_answer_eval.py  test_short_term_memory.py
public/: product-navigation.js
reports/: e2e_scenario_model_report.json  generated_answer_model_report.json
scripts/: .doc.md  eval_memory.py  final_eval_paths.sh  index_document_file.py  inspect_document_memory.py  inspect_eval_run.sh  inspect_long_term_memory.py  inspect_mab_context_case.py  inspect_raw_message_span.py  rebuild_long_term_memory_index.py  run_final_52.sh  (+7 more)
(+319 files in other folders)
