[project]
name = "memory-augmented-retrieval-chatbot"
version = "0.1.0"
description = "Prototype Chainlit chatbot with lightweight persistent memory retrieval."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.0.0",
    "chromadb>=1.0.0",
    "datasets>=5.0.0",
    "faiss-cpu>=1.14.2",
    "langchain>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.0.0",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "langmem>=0.0.30",
    "openai>=1.0.0",
    "pillow>=12.3.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=5.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
